sys/src/linux/aarch64.rs

#[doc = " An atom:Double.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Double {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Floating point value."]
    pub body: f64,
}
#[doc = " An atom:Bool.  May be cast to LV2_Atom."]
pub type LV2_Atom_Bool = LV2_Atom_Int;
#[doc = " An atom:URID.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_URID {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< URID."]
    pub body: u32,
}
#[doc = " An atom:String.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_String {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
}
#[doc = " The body of an atom:Literal."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Literal_Body {
    #[doc = "< Datatype URID."]
    pub datatype: u32,
    #[doc = "< Language URID."]
    pub lang: u32,
}
#[doc = " An atom:Literal.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Literal {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Body."]
    pub body: LV2_Atom_Literal_Body,
}
#[doc = " An atom:Tuple.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Tuple {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
}
#[doc = " The body of an atom:Vector."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Vector_Body {
    #[doc = "< The size of each element in the vector."]
    pub child_size: u32,
    #[doc = "< The type of each element in the vector."]
    pub child_type: u32,
}
#[doc = " An atom:Vector.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Vector {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Body."]
    pub body: LV2_Atom_Vector_Body,
}
#[doc = " The body of an atom:Property (typically in an atom:Object)."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Property_Body {
    #[doc = "< Key (predicate) (mapped URI)."]
    pub key: u32,
    #[doc = "< Context URID (may be, and generally is, 0)."]
    pub context: u32,
    #[doc = "< Value atom header."]
    pub value: LV2_Atom,
}
#[doc = " An atom:Property.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Property {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Body."]
    pub body: LV2_Atom_Property_Body,
}
#[doc = " The body of an atom:Object. May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Object_Body {
    #[doc = "< URID, or 0 for blank."]
    pub id: u32,
    #[doc = "< Type URID (same as rdf:type, for fast dispatch)."]
    pub otype: u32,
}
#[doc = " An atom:Object.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Object {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Body."]
    pub body: LV2_Atom_Object_Body,
}
#[doc = " The header of an atom:Event.  Note this type is NOT an LV2_Atom."]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct LV2_Atom_Event {
    pub time: LV2_Atom_Event__bindgen_ty_1,
    #[doc = "< Event body atom header."]
    pub body: LV2_Atom,
}
#[doc = " Time stamp.  Which type is valid is determined by context."]
#[repr(C)]
#[derive(Copy, Clone)]
pub union LV2_Atom_Event__bindgen_ty_1 {
    #[doc = "< Time in audio frames."]
    pub frames: i64,
    #[doc = "< Time in beats."]
    pub beats: f64,
    _bindgen_union_align: u64,
}
#[doc = "The body of an atom:Sequence (a sequence of events)."]
#[doc = ""]
#[doc = "The unit field is either a URID that described an appropriate time stamp"]
#[doc = "type, or may be 0 where a default stamp type is known.  For"]
#[doc = "LV2_Descriptor::run(), the default stamp type is audio frames."]
#[doc = ""]
#[doc = "The contents of a sequence is a series of LV2_Atom_Event, each aligned"]
#[doc = "to 64-bits, for example:"]
#[doc = "<pre>"]
#[doc = "| Event 1 (size 6)                              | Event 2"]
#[doc = "|       |       |       |       |       |       |       |       |"]
#[doc = "| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | |"]
#[doc = "|FRAMES |SUBFRMS|TYPE   |SIZE   |DATADATADATAPAD|FRAMES |SUBFRMS|..."]
#[doc = "</pre>"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Sequence_Body {
    #[doc = "< URID of unit of event time stamps."]
    pub unit: u32,
    #[doc = "< Currently unused."]
    pub pad: u32,
}
#[doc = " An atom:Sequence."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Sequence {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Body."]
    pub body: LV2_Atom_Sequence_Body,
}
pub type va_list = __builtin_va_list;
#[doc = " A single entry in an Object query."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Object_Query {
    #[doc = "< Key to query (input set by user)"]
    pub key: u32,
    #[doc = "< Found value (output set by query function)"]
    pub value: *mut *const LV2_Atom,
}
extern "C" {
    pub static LV2_ATOM_OBJECT_QUERY_END: LV2_Atom_Object_Query;
}
#[doc = "Opaque pointer to host data for LV2_URID_Map."]
pub type LV2_URID_Map_Handle = *mut ::std::os::raw::c_void;
#[doc = "Opaque pointer to host data for LV2_URID_Unmap."]
pub type LV2_URID_Unmap_Handle = *mut ::std::os::raw::c_void;
#[doc = "URI mapped to an integer."]
pub type LV2_URID = u32;
#[doc = "URID Map Feature (LV2_URID__map)"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_URID_Map {
    #[doc = "Opaque pointer to host data."]
    #[doc = ""]
    #[doc = "This MUST be passed to map_uri() whenever it is called."]
    #[doc = "Otherwise, it must not be interpreted in any way."]
    pub handle: LV2_URID_Map_Handle,
    #[doc = "Get the numeric ID of a URI."]
    #[doc = ""]
    #[doc = "If the ID does not already exist, it will be created."]
    #[doc = ""]
    #[doc = "This function is referentially transparent; any number of calls with the"]
    #[doc = "same arguments is guaranteed to return the same value over the life of a"]
    #[doc = "plugin instance.  Note, however, that several URIs MAY resolve to the"]
    #[doc = "same ID if the host considers those URIs equivalent."]
    #[doc = ""]
    #[doc = "This function is not necessarily very fast or RT-safe: plugins SHOULD"]
    #[doc = "cache any IDs they might need in performance critical situations."]
    #[doc = ""]
    #[doc = "The return value 0 is reserved and indicates that an ID for that URI"]
    #[doc = "could not be created for whatever reason.  However, hosts SHOULD NOT"]
    #[doc = "return 0 from this function in non-exceptional circumstances (i.e. the"]
    #[doc = "URI map SHOULD be dynamic)."]
    #[doc = ""]
    #[doc = "@param handle Must be the callback_data member of this struct."]
    #[doc = "@param uri The URI to be mapped to an integer ID."]
    pub map: ::std::option::Option<
        unsafe extern "C" fn(
            handle: LV2_URID_Map_Handle,
            uri: *const ::std::os::raw::c_char,
        ) -> LV2_URID,
    >,
}
#[doc = "URI Unmap Feature (LV2_URID__unmap)"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_URID_Unmap {
    #[doc = "Opaque pointer to host data."]
    #[doc = ""]
    #[doc = "This MUST be passed to unmap() whenever it is called."]
    #[doc = "Otherwise, it must not be interpreted in any way."]
    pub handle: LV2_URID_Unmap_Handle,
    #[doc = "Get the URI for a previously mapped numeric ID."]
    #[doc = ""]
    #[doc = "Returns NULL if `urid` is not yet mapped.  Otherwise, the corresponding"]
    #[doc = "URI is returned in a canonical form.  This MAY not be the exact same"]
    #[doc = "string that was originally passed to LV2_URID_Map::map(), but it MUST be"]
    #[doc = "an identical URI according to the URI syntax specification (RFC3986).  A"]
    #[doc = "non-NULL return for a given `urid` will always be the same for the life"]
    #[doc = "of the plugin.  Plugins that intend to perform string comparison on"]
    #[doc = "unmapped URIs SHOULD first canonicalise URI strings with a call to"]
    #[doc = "map_uri() followed by a call to unmap_uri()."]
    #[doc = ""]
    #[doc = "@param handle Must be the callback_data member of this struct."]
    #[doc = "@param urid The ID to be mapped back to the URI string."]
    pub unmap: ::std::option::Option<
        unsafe extern "C" fn(
            handle: LV2_URID_Unmap_Handle,
            urid: LV2_URID,
        ) -> *const ::std::os::raw::c_char,
    >,
}
#[doc = " Handle for LV2_Atom_Forge_Sink."]
pub type LV2_Atom_Forge_Sink_Handle = *mut ::std::os::raw::c_void;
#[doc = " A reference to a chunk of written output."]
pub type LV2_Atom_Forge_Ref = isize;
#[doc = " Sink function for writing output.  See lv2_atom_forge_set_sink()."]
pub type LV2_Atom_Forge_Sink = ::std::option::Option<
    unsafe extern "C" fn(
        handle: LV2_Atom_Forge_Sink_Handle,
        buf: *const ::std::os::raw::c_void,
        size: u32,
    ) -> LV2_Atom_Forge_Ref,
>;
#[doc = " Function for resolving a reference.  See lv2_atom_forge_set_sink()."]
pub type LV2_Atom_Forge_Deref_Func = ::std::option::Option<
    unsafe extern "C" fn(
        handle: LV2_Atom_Forge_Sink_Handle,
        ref_: LV2_Atom_Forge_Ref,
    ) -> *mut LV2_Atom,
>;
#[doc = " A stack frame used for keeping track of nested Atom containers."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Forge_Frame {
    pub parent: *mut LV2_Atom_Forge_Frame,
    pub ref_: LV2_Atom_Forge_Ref,
}
#[doc = " A \"forge\" for creating atoms by appending to a buffer."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Forge {
    pub buf: *mut u8,
    pub offset: u32,
    pub size: u32,
    pub sink: LV2_Atom_Forge_Sink,
    pub deref: LV2_Atom_Forge_Deref_Func,
    pub handle: LV2_Atom_Forge_Sink_Handle,
    pub stack: *mut LV2_Atom_Forge_Frame,
    pub Blank: LV2_URID,
    pub Bool: LV2_URID,
    pub Chunk: LV2_URID,
    pub Double: LV2_URID,
    pub Float: LV2_URID,
    pub Int: LV2_URID,
    pub Long: LV2_URID,
    pub Literal: LV2_URID,
    pub Object: LV2_URID,
    pub Path: LV2_URID,
    pub Property: LV2_URID,
    pub Resource: LV2_URID,
    pub Sequence: LV2_URID,
    pub String: LV2_URID,
    pub Tuple: LV2_URID,
    pub URI: LV2_URID,
    pub URID: LV2_URID,
    pub Vector: LV2_URID,
}
#[doc = "Plugin Instance Handle."]
#[doc = ""]
#[doc = "This is a handle for one particular instance of a plugin.  It is valid to"]
#[doc = "compare to NULL (or 0 for C++) but otherwise the host MUST NOT attempt to"]
#[doc = "interpret it."]
pub type LV2_Handle = *mut ::std::os::raw::c_void;
#[doc = "Feature."]
#[doc = ""]
#[doc = "Features allow hosts to make additional functionality available to plugins"]
#[doc = "without requiring modification to the LV2 API.  Extensions may define new"]
#[doc = "features and specify the `URI` and `data` to be used if necessary."]
#[doc = "Some features, such as lv2:isLive, do not require the host to pass data."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Feature {
    #[doc = "A globally unique, case-sensitive identifier (URI) for this feature."]
    #[doc = ""]
    #[doc = "This MUST be a valid URI string as defined by RFC 3986."]
    pub URI: *const ::std::os::raw::c_char,
    #[doc = "Pointer to arbitrary data."]
    #[doc = ""]
    #[doc = "The format of this data is defined by the extension which describes the"]
    #[doc = "feature with the given `URI`."]
    pub data: *mut ::std::os::raw::c_void,
}
